# hello-world-depin

./: Cargo.toml
publisher/: Cargo.toml
publisher/src/: main.rs
subscriber/: Cargo.toml
subscriber/src/: main.rs
